jet_ml_synthesis_model_vgg16_output_failure/ml_synthesis_vgg16_error_24952926.err
[NbConvertApp] Converting notebook jet-ml-synthesis-model-vgg16.ipynb to python
[NbConvertApp] Writing 8075 bytes to jet-ml-synthesis-model-vgg16.py

EnvironmentNameNotFound: Could not find conda environment: tensorflow_gpuenv_v2
You can list all discoverable environments with `conda info --envs`.


  File "jet-ml-synthesis-model-vgg16.py", line 10
    from .jet_ml_dataset_builder import jet_ml_dataset_builder_utilities.*
                                                                        ^
SyntaxError: invalid syntax
